[package]
name = "affectively-audio-processor"
version = "1.0.0"
authors = ["AFFECTIVELY <opensource@affectively.app>"]
edition = "2021"
license = "MIT"
description = "High-performance audio processing utilities for WebAssembly"
repository = "https://github.com/affectively-ai/wasm-audio-processor"
documentation = "https://docs.rs/affectively-audio-processor"
keywords = ["wasm", "audio", "processing", "mixing", "webassembly"]
categories = ["multimedia::audio", "wasm"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
base64 = "0.22"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "s"
